--- a/index.html
+++ b/index.html
@@ -7,16 +7,130 @@
     <link rel="stylesheet" href="styles/architets.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav>
+            <div class="nav-container">
+                <h3 class="nav-title">G3 Architects</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                     <li><a href="">Contac</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+            <div class="banner-container">
+                <div class="title-contant">
+                    <h1 class="banner-title">Brand New Group of Architects</h1>
+                </div>
+                <p class="banner-des">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="primary-btn">Explore more</button>
+                <img src="g3-architects-website/images/banner.png" alt="">
+
+            </div>
 
    </header>
 
    <main>
+            <section class="teams-container">
+                <div class="teams-img-container">
+                    <img src="g3-architects-website/images/team1.png" alt="">
+                    <img src="g3-architects-website/images/team2.png" alt="">
+                    <img src="g3-architects-website/images/team3.png" alt="">
+                    <img src="g3-architects-website/images/team4.png" alt="">
 
+                </div>
+                <div class="teams-contant">
+                    <h2 class="teams-title"><span class="span1">Quick list</span> <span class="span2">of Our</span> Features</h2>
+                    <p class="nav-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="primary-btn">Explore more</button>
+                </div>
+            </section>
+
+            <section class="Features">
+                    
+                <div class="feature-container">
+                    <div class="feature-contant">
+                        <div class="title-border"><h3 class="features-title">Features you will <br>
+                            love & enjoy</h3></div>
+                        <p class="title-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                        <div class="card">
+                            <h3 class="card-title">Desktop & Mobile Version</h3>
+                            <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-title">Desktop & Mobile Version</h3>
+                            <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-title">Desktop & Mobile Version</h3>
+                            <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-title">Desktop & Mobile Version</h3>
+                            <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-title">Desktop & Mobile Version</h3>
+                            <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                        </div>
+                    </div>
+                    <div class="feature-banner">
+                        <img src="g3-architects-website/images/architect.png" alt="">
+                        <div class="year">
+                            <h4 class="year-title">10 Years</h4>
+                            <p>exprinces</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="facts">
+                    <h2 class="facts-title">Some Facts</h2>
+                    <p class="facts-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="facts-container">
+                    <div class="facts-card">
+                        <img src="g3-architects-website/images/icons/ribon.png" alt="">
+                        <h3 class="facts-card-title">54</h3>
+                        <p class="facts-cars-des">Awards Winnings</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="g3-architects-website/images/icons/projects.png" alt="">
+                        <h3 class="facts-card-title">1458</h3>
+                        <p class="facts-cars-des">Project Finished</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="g3-architects-website/images/icons/customers.png" alt="">
+                        <h3 class="facts-card-title">780</h3>
+                        <p class="facts-cars-des">Clients Worked</p>
+                    </div>
+                    <div class="facts-card">
+                        <img src="g3-architects-website/images/icons/email.png" alt="">
+                        <h3 class="facts-card-title">22889</h3>
+                        <p class="facts-cars-des">Email Send</p>
+                    </div>
+                </div>
+            </section>
+            <section class="sponser">
+                    <div class="sponser-title">
+                        <h2 class="sponser-hadding">Our Sponsors</h2>
+                    <p class="sponser-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                    </div>
+                <div class="sponser-container">
+                    <div class="sponser-img"><img src="g3-architects-website/images/sponsors/amazon.png" alt="">
+                    </div>
+                    <div class="sponser-img"><img src="g3-architects-website/images/sponsors/figma.png" alt=""></div>
+                    <div class="sponser-img"><img src="g3-architects-website/images/sponsors/google.png" alt=""></div>
+                    <div class="sponser-img"><img src="g3-architects-website/images/sponsors/spotify.png" alt=""></div>
+                    <div class="sponser-img"><img src="g3-architects-website/images/sponsors/telerama.png" alt=""></div>
+                </div>
+            </section>
    </main>
 
    <footer>
-    
+        <small>&copy 2021-2023 copyrite to programin hero</small>
    </footer>
 </body>
 </html>
